packages/astro/e2e/fixtures/errors/src/pages/svelte-syntax-error.astro
---
import SvelteSyntaxError from '../components/svelte/SvelteSyntaxError.svelte';
---

<div>
  <SvelteSyntaxError />
</div>
